[package]
name = "fyntr"
version = "0.3.5"
edition = "2024"
description = "A minimal forward proxy to tame bursty outbound traffic"
license = "MIT"
repository = "https://github.com/Crux-One/Fyntr"
readme = "README.md"
exclude = [".github/", "assets/"]
categories = ["network-programming", "command-line-utilities"]
keywords = ["forward-proxy", "http-connect", "traffic-shaping"]

[[bin]]
name = "fyntr"
path = "src/main.rs"

[dependencies]
actix = "0.13"
actix-rt = "2.11.0"
tokio = { version = "1.52.3", features = ["full"] }
anyhow = "1.0.102"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
env_logger = "0.11.10"
log = "0.4.30"
idna = "1.1.0"

[target.'cfg(unix)'.dependencies]
rlimit = "0.11.0"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["test-util"] }
quickcheck = "1.1"
tempfile = "3.27.0"

[profile.release]
strip = true
lto = true
