[package]
name = "fyntr"
version = "0.4.3"
edition = "2024"
description = "A minimal forward proxy to tame bursty outbound traffic"
license = "MIT"
repository = "https://github.com/Crux-One/Fyntr"
readme = "README.md"
exclude = [".github/", "assets/"]
categories = ["network-programming", "command-line-utilities"]
keywords = ["forward-proxy", "http-connect", "traffic-shaping"]

[[bin]]
name = "fyntr"
path = "src/main.rs"

[dependencies]
actix = "0.13"
actix-rt = "2.11.0"
tokio = { version = "1.53.1", features = ["full"] }
anyhow = "1.0.104"
bytes = "1.12.1"
clap = { version = "4.6.3", features = ["derive", "env"] }
env_logger = "0.11.11"
log = "0.4.33"
idna = "1.1.0"
unicode-script = "0.5.8"

[target.'cfg(unix)'.dependencies]
rlimit = "0.11.0"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["test-util"] }
quickcheck = "1.1"
tempfile = "3.27.0"

[profile.release]
strip = true
lto = true
